# Game-of-life

./: CMakeLists.txt  Core.cpp  Core.h  Display.cpp  Display.h  README.md  main.cpp
